# ESP32_SensorScope

./: .gitmodules  LICENSE  README.md
firmware/: .gitignore
firmware/ESP32_SensorScope/src/: FT6236.h  main.cpp
firmware/ESP32_SensorScope_IDF/: CMakeLists.txt  sdkConfig_notes.txt
firmware/ESP32_SensorScope_IDF/lv_ui_code/: CMakeLists.txt  Greek_alphabet_14.c  SDI_12_icon_65.c  Settings_icon_65.c  analog_icon_65.c  appGUI.c  appGUI.h  modbus_icon_65.c  oscilloscope_icon_65.c  oscilloscope_ui.c  oscilloscope_ui.h  protocol_analyzer_icon_65.c  serial_analyzer.c  serial_analyzer.h  serial_analyzer_icon_65.c  terminal_icon_65.c  ui_misc.c  ui_misc.h  ui_settings.c  ui_settings.h
firmware/ESP32_SensorScope_IDF/main/: CMakeLists.txt  Circuitboard_dark_landscape.c  appGUI.c  appGUI.h  display_driver.c  display_driver.h  display_driver_.c  idf_component.yml  main.c  oscilloscope.c  oscilloscope.h  serial_analyzer_rmt.c  serial_analyzer_rmt.h  settings.c  settings.h  shared_types.h
firmware/ESP32_SensorScope_PIO/: platformio.ini
firmware/ESP32_SensorScope_PIO/src/: FT6236.cpp  lv_conf.h
hardware/kicad/ESP32_SensorScope/: 4Inch TFT SPI LCD 480X320.step  ESP32-S3-DevkitC-1.kicad_sch  ESP32-S3-WROOM-1.kicad_sch  ESP32_SensorScope.kicad_pcb  ESP32_SensorScope.kicad_pro  ESP32_SensorScope.kicad_sch  IO Extender.kicad_sch  My_library.kicad_sym  Power_management.kicad_sch  RS232.kicad_sch  RS485.kicad_sch  SDI12.kicad_sch  Scope.kicad_sch  UART.kicad_sch  UI.kicad_sch  current_voltage_loop.kicad_sch  fp-lib-table  sym-lib-table
(+1 files in other folders)
